--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>Krixtoffer Moberg Christensen</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>Hei U+1F44B,</p>
+    <p>Jeg er en utvikler som elsker å automatisere de kjedelige tingene.</p>
+    <h2>Mine personlige prosjekter:</h2>
+    <ul>
+      <li><a href="https://mealer.kristofferchr.dev">Middagsplanleggeren</a></li>
+    </ul>
   </body>
 </html>
