--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>Krixtoffer Moberg Christensen</title>
+    <title>Kristoffer Moberg Christensen</title>
   </head>
   <body>
-    <p>Hei U+1F44B,</p>
+    <p>Hei 👋,</p>
     <p>Jeg er en utvikler som elsker å automatisere de kjedelige tingene.</p>
     <h2>Mine personlige prosjekter:</h2>
     <ul>
